@@ -28,13 +28,11 @@ define( function( require ) {
   var FACE_DIAMETER = 75;
 
   /**
-   * @param {Property<Vector2>} locationProperty
-   * @param {Bounds2} dragBounds
    * @param {Boolean} smile
    * @param {Function} createContentFunction function that creates the content of the dialog that will appear below the face node
    * @param {*} options
    */
-  function GamePopupNode( locationProperty, dragBounds, smile, createContentFunction, options ) {
+  function GamePopupNode( smile, createContentFunction, options ) {
 
     options = _.extend( {
       xMargin: 25,
@@ -63,43 +61,8 @@ define( function( require ) {
       { fill: 'rgba(80,80,80,0.12)' } );
     content.centerX = backgroundNode.centerX;
 
-    // move icon (cross) at upper-left
-    var CROSS_WIDTH = 30;
-    var arrowOptions = {
-      tailWidth: 5,
-      headWidth: 10,
-      headHeight: 8,
-      doubleHead: true,
-      fill: '#f1f1f2',
-      lineWidth: 0
-    };
-    var cross = new Node();
-    cross.addChild( new ArrowNode( -CROSS_WIDTH / 2, 0, CROSS_WIDTH / 2, 0, arrowOptions ) );
-    cross.addChild( new ArrowNode( 0, -CROSS_WIDTH / 2, 0, CROSS_WIDTH / 2, arrowOptions ) );
-    cross.left = backgroundNode.left + 5;
-    cross.top = backgroundNode.top + 5;
-
-    options.cursor = 'pointer';
-    options.children = [ shadowNode, backgroundNode, cross, content ];
+    options.children = [ shadowNode, backgroundNode, content ];
     Node.call( this, options );
-
-    // Adjust drag bounds to account for dialog dimensions. Origin is at top-center.
-    var minWidth = 20; // minimum amount of dialog width that must be visible
-    var minHeight = 20; // minimum amount of dialog height that must be visible
-    var adjustedDragBounds = new Bounds2(
-        dragBounds.minX - this.width / 2 + minWidth, dragBounds.minY - this.height + minHeight,
-        dragBounds.maxX + this.width / 2 - minWidth, dragBounds.maxY - minHeight );
-
-    // If location is outside drag bounds, move it inside.
-    var x = Math.max( adjustedDragBounds.minX, Math.min( adjustedDragBounds.maxX, locationProperty.get().x ) );
-    var y = Math.max( adjustedDragBounds.minY, Math.min( adjustedDragBounds.maxY, locationProperty.get().y ) );
-    locationProperty.set( new Vector2( x, y ) );
-
-    // draggable
-    this.addInputListener( new MovableDragHandler( { locationProperty: locationProperty, dragBounds: adjustedDragBounds }, ModelViewTransform2.createIdentity() ) );
-    locationProperty.link( function() {
-      self.centerTop = locationProperty.get();
-    } );
   }
 
   return inherit( Node, GamePopupNode );
